modules/vpc/internet_gateway.tf
resource "aws_internet_gateway" "this" {
  vpc_id = aws_vpc.this.id
  tags = {
    Name = "zerezes-data-${var.environment}-igw"
  }
}
